Mejora en la static page

--- a/src/StaticWebApp/index.html
+++ b/src/StaticWebApp/index.html
@@ -17,17 +17,18 @@
   ></script>
 </head>
 <body>
-  <div class="px-4 py-5 my-5">
+  <div class="px-4 py-5">
     <h1 class="display-5 fw-bold text-center">Hola, Soy Botsito</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4 text-center">
-        Bot diseñado para la clase de Sistemas Inteligentes. Puede sugerirte un
-        destino basandose en las respuestas a sus preguntas. ¿Quieres empezar?
+        Bot dise&ntilde;ado para la clase de Sistemas Inteligentes. Puede
+        sugerirte un destino basandose en las respuestas a sus preguntas.
+        ¿Quieres empezar?
       </p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <div
           class="Content"
-          style="height: 100%; overflow: auto; background: #fff"
+          style="height: 100%; overflow: auto; background: #fff; width: 100%"
         >
           <div
             style="
@@ -50,7 +51,7 @@
             </div>
           </div>
           <div
-            style="height: 429px; border: 1px solid"
+            style="height: 560px; border: 1px solid"
             id="webchat"
             role="main"
           ></div>
