Fix signo de pregunta en static web

--- a/src/StaticWebApp/index.html
+++ b/src/StaticWebApp/index.html
@@ -23,7 +23,7 @@
       <p class="lead mb-4 text-center">
         Bot dise&ntilde;ado para la clase de Sistemas Inteligentes. Puede
         sugerirte un destino basandose en las respuestas a sus preguntas.
-        ¿Quieres empezar?
+        &iquest;Quieres empezar?
       </p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <div
